# 4D-ProblemSolver

./: .gitignore  GMA_MCP_SPEC.md  README.md
application/: README.md  design-tokens.json
application/angular/: 4D-ProblemSolver.code-workspace  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
application/angular/src/: index.html  main.ts  styles.scss
application/angular/src/app/models/: report.model.ts
application/angular/src/assets/: paper-texture.avif
application/angular/styles/: _tokens.scss  _ui.scss
application/backend/: .dockerignore  .env.example  .gitignore  Makefile  cloudbuild.yaml  deploy.ps1  docker-compose.yml  package-lock.json
application/backend/adk-agents/: pyproject.toml
application/backend/adk-agents/problem_solver/: agent.py  alternative_solver.py  schemas.py  triz_solver.py
application/backend/gma-mcp-server/: README.md  pyproject.toml
application/backend/gma-mcp-server/app/: __init__.py  main.py
application/backend/gma-mcp-server/app/core/: __init__.py  config.py
application/backend/gma-mcp-server/app/tools/: __init__.py  gma.py
application/backend/mcp-server/: mcp_guide.md
application/backend/mcp-server/app/: main.py
application/design/: Design Tokens.dc.html  Packaging TRIZ Report.dc.html
backend/: .env.example  README.md  cloudbuild.yaml  docker-compose.yml  nx.json  package-lock.json  package.json
backend/adk-agents/: Dockerfile
backend/adk-agents/problem_solver/: agent.py  alternative_solver.py  triz_solver.py
backend/adk-agents/problem_solver/.adk/: session.db
(+13 files in other folders)
